update issue with footer on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -36,7 +36,7 @@ header {
 .Main-Body-Container {
 	background-color: rgba(169,169,169,.85)/*url("./Seattle-skyline.jpg") no-repeat top center; */;
 	background-size: cover; 
-	height: 100%; 
+	min-height: 100vh;  
 	display: block; 
 	flex-grow: 1; 
 	z-index: -1; 
